kroxylicious-operator/examples/gateway/gateway.yaml
#
# Copyright Kroxylicious Authors.
#
# Licensed under the Apache Software License version 2.0, available at http://www.apache.org/licenses/LICENSE-2.0
#

---
# cluster level
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: my-kafka-gateway-class
spec:
  controllerName: kroxylicious.io/operator
  parametersRef:
    group: kroxylicious.io
    kind: GatewayClassConfig
    name:
    namespace:
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-kafka-gateway
spec:
  gatewayClassName: my-kafka-gateway-class # i.e. the above object
  listeners:
  - name: my-listener
    # hostname: ??? # ignored for kafka
    port: 9092
    protocol: kafka
    tls: # optional
      mode: Terminate #
      certificateRefs: # CertificateRefs contains a series of references to Kubernetes objects that contains TLS certificates and private keys.
        - kind: Secret
          name: my-tls-key
      frontendValidation:
        caCertificateRefs:
          - kind: Secret
            name: my-ca-certs # A single reference to a Kubernetes ConfigMap with the CA certificate in a key named ca.crt.
    allowedRoutes: # optional
      namespaces:
        - from: Same # All | Same | Selector
          # selector: ""
      kinds:
      - kind: KafkaRoute
  addresses: # optional
  - type: ???
    value: 1.2.3.4
  infrastructure: # optional
    ???
  backendTLS: # optional
    ???
